fixed gap in cards. More styling like box-shadow

--- a/natureproject/natureapp/static/natureapp/main.css
+++ b/natureproject/natureapp/static/natureapp/main.css
@@ -223,6 +223,7 @@
     padding-top: 6rem;
     text-align: center;
     background-color: rgb(235, 235, 235);
+    /* background-color: red; */
     /* background-color: #fbeec1; */
     /* background: #205373; */
     /* background-color: lightgreen; */
@@ -250,13 +251,15 @@
     justify-content: center;
     text-decoration: none;
     padding: 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
 }
 #eventsCard a {
     text-decoration: none;
 }
 #eventsCard:hover{
-    opacity: .9;
+    opacity: .95;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5), 0 12px 40px 0 rgba(0, 0, 0, 0.40);
 }
 
 #postContainer{
@@ -265,18 +268,19 @@
 }
 
 #innerPost{
-    position: relative;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 2;
-    height: 12.5rem;
+    /* height: 12.5rem; */
     padding: 0rem 1rem 0 1rem;
     color: black;
     padding-top: 2rem;
     background-color: white;
     width: 40rem;
+    position: relative;
+    top: -.3rem;
 }  
 
 
@@ -295,10 +299,6 @@
 }
 
 #eventImg{
-    /* border-radius: 1rem 0 0 1rem; */
-    position: relative;
-    z-index: 1;
-    /* width: 70%; */
     width: 40rem;
     height: 20rem;
     object-fit: cover;
